[package]
name = "indico-transpose"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
description = "Translate Indico's per-user registrations into per-course registrations"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/HadrienG2/indico-transpose"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.2"
log = "0.4.20"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.34", features = ["parsing", "serde", "macros"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
